--- a/QE/thesis_1/main.tex
+++ b/QE/thesis_1/main.tex
@@ -149,23 +149,28 @@ headsepline, % Uncomment to get a line under the header
 \section{Introduction}
 
 \subsection{Serial Founder Effects}
-The OOA is a series of founder effects.
-This can drastically change the allele frequencies within the population, which can lead to rapid divergence.
+Human expansion out of Africa (OOA) is estimated to have occurred between 45,000 and 60,000 years ago, and resulted in a significant loss of diversity in the populations the colonized new habitats (Henn, 2012). 
+This loss of diversity is the result of a population bottleneck from a small group leaving a source population. 
+Estimates of the parameters of this bottleneck using sequence data and modelling population dynamics range from 2,500 to as low as 450 individuals (Eller, 2004; Fagundes, 2007).
+However, as humans expanded into new habitats, each new colony was founded by small groups leading to successive bottlenecks and reduction in diversity.
+This trend is still apparent in modern humans, with distance from Africa being correlated with loss of genetic diversity (Ramachandran, 2005).
+Bottlenecks can drastically change the allele frequencies within the population, which can lead to rapid divergence (Rosenberg, 2002; Charlesworth, 2003).
 Moreover, because of the limited population size, inbreeding will have impacts on heterozygosity.
-This can impact the rates of genetic diseases.
+Accounting for population divergence and population specific allele frequencies are necessary for disease phenotype association tests (Gravel, 2010).
 
 Mutational patterns in founder populations have recently become possible to measure, and useful for quantifying changes in mutation rates, as well as demographic histories of populations.
 
-Founder populations in theoretical population genetics
-historical changes in population size or structure.
+Studying recent founder events can lead to better understanding of the mechanisms and dynamics of historical founder events. 
 
-Studying recent founder events can lead to better understanding of the mechanisms and dynamics of founder events. 
+Inferring historical population size based on local density of heterozygosity (Li \& Durbin, 2011)
 
-Founder populations in human history
+Admixture with Neanderthals?
 
-Impact of studying founder populations. Why is it important?
-These populations often harbour a unique set of disease risks.
-They may also have a distinct mutational signature.
+%Impact of studying founder populations. Why is it important?
+%These populations often harbour a unique set of disease risks.
+%They may also have a distinct mutational signature.
+
+
 
 
 \subsection{Thesis proposal}
@@ -218,6 +223,7 @@ The second phase of the 1kGP implemented multiple technological and analytical i
 Even though such batch effects clearly have the potential to confound analyses, the usefulness and ubiquity of the 1kGP data make such issues particularly insidious.   
 This raises the question of whether and how such legacy data should be included in contemporary analyses alongside more recent cohorts.
 Here we point out how large and previously unreported batch effects in the early phases of the 1kGP still lead to incorrect genetic conclusions through population genetic analyses and indirect use through prominent imputation servers.
+
 \section{summary of results from paper}
 Harris and Pritchard reported an excess of a 3-mer substitution patterns *AC${\rightarrow}$*CC in a portion of the Japanese individuals in the 1kGP \citep{Harris2017a}.
 While trying to follow up on this observation in a larger and more recent Japanese cohort, we did not find this particular signature.
@@ -228,8 +234,10 @@ These mismatches were maintained after filtering for low-quality regions of the 
 To identify SNPs that are likely to reproduce poorly across cohorts without having access to a second cohort, we performed an association study in the JPT for SNPs that associate strongly with low $Q$ (Figure \ref{SFS}).
 Traditionally, genome wide association studies use genotypes as the independent variable. 
 Here we perform a "reverse GWAS", in the sense that genotypes are now the dependent variable that we attempt to predict using the continuous variable $Q$ as the independent variable.
-We use logistic regression of the genotypes on $Q$ and identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10^{-6}$. 
-\section{link to manuscript}
+We use logistic regression of the genotypes on $Q$ and identify 587 SNPs with $p < 10^{-8}$ and 1034 SNPs with $ p < 10^{-6}$.
+
+
+link to manuscript
 
 \chapter{Characterization of the Quebec population}
 
@@ -321,12 +329,19 @@ Expanding the current analyses to include data from French individuals could be 
 \chapter{Estimating mutation rates}
 
 \section{Review of current methods and limitations}
+
+Mutation rates are important for understanding the timing of evolutionary processes.
+It is used as an evolutionary clock if you assume a constant accumulation rate of neutral mutations.
+The basic equation of mutation rate is $N / LM$ where N is the number of mutations, L is the length of the region and M is the number of generations.
+Estimating mutation rates in humans has proven to be difficult for a number of reasons.
+[list of reasons here]
+
 Three main categories of methods :
 
-1. Phylogenetic rate : Chimp vs human estimates 2.5 x 10-8 but limitations about the number of generations that separate the two species. Based on fossil evidence.
+\subsection{Phylogenetic method :} Chimp vs human estimates $2.5\times10^{-8}$ but limitations about the number of generations that separate the two species. Based on fossil evidence.
 
-2. Direct approach : One generation using trio sequencing. 
-Tend to give lower estimates compared to phylogenetic approach. (1-1.25 X10-8)
+\subsection{Trio method :} One generation using trio sequencing. 
+Tend to give lower estimates compared to phylogenetic approach. ($1-1.25\times10^{-8}$)
 
 Pedigree approaches are simple in and direct approaches for per generation estimates but are met with several limitations.
 Sex bias : fathers germline mutations increase with age and could be different among men.
@@ -345,8 +360,8 @@ Mutational signatures specific to populations suggest recent changes in mutation
 
 One possible solution is to limit estimates to CpG sites as they appear to have more consistent mutation rates across primates. *(but apparently no diff in paternal age for CpG transitions vs other mutations)
 
-3. Population genetics approach : 
-Estimates around 1.6-1.7 x 10-8
+\subsection{Population genetics method : }
+Estimates around $1.6-1.7\times10^{-8}$
 
 Taking advantage of founder populations with known pedigrees can get better estimates of mutation rates over multiuple generations.
 Identify mutations in regions of autozygosity and count the number of generations that separate these segments. 
