--- a/QE/thesis_1/main.tex
+++ b/QE/thesis_1/main.tex
@@ -162,15 +162,6 @@ Mutational patterns in founder populations have recently become possible to meas
 
 Studying recent founder events can lead to better understanding of the mechanisms and dynamics of historical founder events. 
 
-Inferring historical population size based on local density of heterozygosity (Li \& Durbin, 2011)
-
-Admixture with Neanderthals?
-
-%Impact of studying founder populations. Why is it important?
-%These populations often harbour a unique set of disease risks.
-%They may also have a distinct mutational signature.
-
-
 
 
 \subsection{Thesis proposal}
@@ -319,12 +310,22 @@ These preliminary results are very promising as they appear to capture the geogr
 
 
 \section{Future Directions}
-We know that there are regional differences in disease rates that are linked to population substructure.
-The genetic data used in UMAP analysis also identify similar clusters.
-Identifying the variants that are responsible for the clustering could also provide us with a shortlist of variants that could also be linked to the diseases that are associated with these sub-populations.
-This method has yet to be formalized, but in brief, performing a logistic regression predicting presence of genotypes using the axis of variation that separates one group from the others could be used to identify these variants.
+%We know that there are regional differences in disease rates that are linked to population substructure.
+%The genetic data used in UMAP analysis also identify similar clusters.
+%Identifying the variants that are responsible for the clustering could also provide us with a shortlist of variants that could also be linked to the diseases that are associated with these sub-populations.
+%This method has yet to be formalized, but in brief, performing a logistic regression predicting presence of genotypes using the axis of variation that separates one group from the others could be used to identify these variants.
+While Fst gives a good estimate of genome wide past coalescent rates, the analysis of long IBD segments can provide us with more detailed insight of more recent demographic history (Ralph, 2013; Charlesworth 2003).
+Because Fst takes in all polymorphisms as input for the statistic, it does not distinguish between recent and more ancient common ancestry.
+Analysis of IBD segments shared among individuals from Quebec can be useful for reconstructing the recent structure of relatedness.
+The length of the shared segments can be used to infer the number of generations leading back to a common ancestor.
+Combining this with geographic data can infer patterns of shared ancestry across the Saint-Lawrence valley.
+Ralph (2013) identified a general trend of decreased of shared ancestry with geographic distance as well as more regional signals of IBD in European populations.
+Europe has a rich history of complex migratory patterns and demographic histories that is difficult to trace back with certainty. 
+Quebec on the other hand has a much more recent history that may be easier to trace with IBD analysis.
 
-Expanding the current analyses to include data from French individuals could be used to confirm the results from the Fst analysis as well as provide insight into which regions in France are source populations to regions in Quebec. 
+While studying Quebec populations on their own can provide detailed historical inference of demographics, including samples from other European populations can provide more context.
+Expanding the current analyses to include data from French individuals could be used to confirm the results from the Fst analysis as well as provide insight into which regions in France are source populations to regions in Quebec.
+French genome data is obtainable through Dr. Christian Dina, one of our collaborators in the University of Nantes. 
 
 \chapter{Estimating mutation rates}
 
